<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Screen</string>
    <string name="title_section_candidates">Candidates</string>
    <string name="title_section_interviews">Interviews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_update">Update</string>

    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="rating">Rating</string>
    
</resources>